# Raddy

./: Cargo.toml  Justfile  LICENSE.md  NOTICE  README.md  ctor.cpp  det.ipynb  diff.ipynb  gen_all.sh  justfile
dev-docs/: docs.typ
meta/: operators.py  scalar_matrix_mul.py  scalar_matrix_mul.txt
notebooks/: det.ipynb  diff.ipynb  sparse.ipynb
src/: additional_ops.rs  commutative.rs  compare.rs  ctor.rs  det.rs  lib.rs  main.rs  make.rs  nalgebra_scalar.rs  norms.rs  scalar_matrix_mul.rs  symbolic.rs  test.rs  testscalar.rs  types.rs
src/examples/: basic.rs  mass_spring.rs
src/make/: mod.rs  val.rs  var.rs
src/matrix/: mod.rs  routines.rs
src/misc/: mod.rs  symbolic_1.rs  symbolic_2.rs  symbolic_3.rs  symbolic_massspring.rs  testscalar.rs
src/scalar/: commutative.rs  field_impl.rs  mod.rs  num_traits_impl.rs  operator_traits_impl.rs  operators_generated.rs  ref_op_impl.rs  scalar_matrix_mul.rs
src/sparse/: function.rs  mod.rs  objective.rs
src/test/: matrix.rs  mod.rs  scalar.rs  sparse.rs  symbolic.rs
