[package]
name = "raddy"
version = "0.1.0"
edition = "2021"
license = "LICENSE.md"
description = "An automatic differentiation system for geometry and simulation."
documentation = ""
repository = "https://github.com/Da1sypetals/Raddy"
readme = ""


[[bin]]
name = "basic"
path = "src/examples/basic.rs"

[[bin]]
name = "mass-spring"
path = "src/examples/mass_spring.rs"

[dependencies]
nalgebra = "0.33.2"
approx = "0.5.1"
num-traits = "0.2.19"
rand = "0.8.5"
simba = "0.9.0"
faer = "0.20.1"
faer-sparse = "0.17.1"
itertools = "0.14.0"
